--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.2.3
   shimmer: ^3.0.0
   pin_code_fields: ^8.0.1
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
