Committed by CHARAN 22-18-2024 AT 7:09 AM

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -86,6 +86,12 @@ flutter:
        fonts:
          - asset: fonts/RozhaOne-Regular.ttf
 
+
+     - family: Poppins
+       fonts:
+         - asset: fonts/Poppins-Regular.ttf
+
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
