--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shimmer: ^3.0.0
   pin_code_fields: ^8.0.1
   path_provider: ^2.0.15
+  http: ^1.2.2
 
 dev_dependencies:
   flutter_test:
