--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,11 @@ dependencies:
   pin_code_fields: ^8.0.1
   path_provider: ^2.0.15
   http: ^1.2.2
+  firebase_core: ^3.2.0
+  firebase_messaging: ^15.0.3
+  firebase_crashlytics: ^4.0.3
+  flutter_local_notifications: ^17.2.1+2
+  firebase_analytics: ^11.2.0
 
 dev_dependencies:
   flutter_test:
