--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   pin_code_fields: ^8.0.1
   path_provider: ^2.0.15
   http: ^1.2.2
+  connectivity_plus: ^6.1.0
   firebase_core: ^3.2.0
   firebase_messaging: ^15.0.3
   firebase_crashlytics: ^4.0.3
