--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   firebase_crashlytics: ^4.0.3
   flutter_local_notifications: ^17.2.1+2
   firebase_analytics: ^11.2.0
+  provider: ^6.1.2
 
 dev_dependencies:
   flutter_test:
