--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   flutter_local_notifications: ^17.2.1+2
   firebase_analytics: ^11.2.0
   provider: ^6.1.2
+  lottie: ^3.1.2
 
 dev_dependencies:
   flutter_test:
