--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ dependencies:
   firebase_analytics: ^11.2.0
   provider: ^6.1.2
   lottie: ^3.1.2
+  dropdown_button2: ^2.3.9
 
 dev_dependencies:
   flutter_test:
