--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,7 +51,7 @@ dependencies:
   provider: ^6.1.2
   lottie: ^3.1.2
   dropdown_button2: ^2.3.9
-
+  image_picker: ^0.8.7+3
 dev_dependencies:
   flutter_test:
     sdk: flutter
