--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,8 @@ dependencies:
   lottie: ^3.1.2
   dropdown_button2: ^2.3.9
   image_picker: ^1.1.2
+  photo_view: ^0.14.0
+
 
 dev_dependencies:
   flutter_test:
