--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dependencies:
   dropdown_button2: ^2.3.9
   image_picker: ^1.1.2
   photo_view: ^0.14.0
+  badges: ^3.1.2
 
 dev_dependencies:
   flutter_test:
