--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   image_picker: ^1.1.2
   photo_view: ^0.14.0
   badges: ^3.1.2
+  get: ^4.6.6
+
 
 dev_dependencies:
   flutter_test:
